--- a/dentaire-project/src/App.css
+++ b/dentaire-project/src/App.css
@@ -1,42 +1,598 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+    margin: 0px;
+    padding: 0px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.smallhr {
+    width: 100px;
+    border: 1px solid #00AEEF;
+    margin: 0;
+    padding-left: 0.1rem;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+    padding: 1rem 0px;
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.navbar-links a,
+li {
+    list-style: none;
+    font-style: none;
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+}
+
+.navbar-links {
+    width: 36vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar-btn {
+    height: 60%;
+    border: none;
+    background-color: #00AEEF;
+    color: white;
+}
+
+/*******************************************************************************/
+.hero {
+    display: flex;
+    background-image: url(main.jpg);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+.hero-btn1 {
+    height: 10vh;
+    width: 30vh;
+    border: none;
+    background-color: #00AEEF;
+    color: white;
+}
+
+.hero-btn2 {
+    height: 10vh;
+    width: 30vh;
+    border: none;
+    border: 1px solid #00AEEF;
+    color: white;
+    background: transparent;
+
+}
+
+.hero h1 {
+    font-size: 3.5rem;
+    color: WHITE;
+    width: 50vw;
+    margin-bottom: 0;
+}
+
+.hero p {
+    font-size: 1.5rem;
+    color: WHITE;
+    width: 50vw;
+}
+
+/***********************************************************************************************************/
+.about {
+    padding: 2rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+}
+
+.about-img {
+    height: 45vh;
+}
+
+.about-left {
+    width: 20VW;
+}
+
+.about-left p {
+    width: 30vw;
+    font-size: 1rem;
+}
+
+.about-left h1 {
+    font-size: 2rem;
+}
+
+.subar {
+    width: 80%;
+    height: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+
+    align-items: center;
+}
+
+.bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40vw;
+}
+
+progress {
+    height: 1rem;
+    width: 80%;
+    background-color: #6BBBE5;
+    border: none;
+}
+
+progress::-webkit-progress-bar {
+    background-color: #eee;
+}
+
+progress::-webkit-progress-value {
+    background-color: #00AAEE;
+}
+
+/**************************************************************************/
+.stats {
+    justify-self: center;
+    width: 50%;
+    display: flex;
+    gap: 10%;
+    justify-content: center;
+    padding: 2rem 0;
+
+}
+.stats-block {
+    display: block;
+    text-align: center;
+}
+.stats-block h3 {
+    font-size: 1rem;
+}
+
+/*********************************************************************************************************/
+
+.services {
+    padding: 4rem 0;
+    display: flex;
+    justify-content: center;
+    background-image: url(main.jpg);
+
+}
+
+.services-left-grid {
+    padding-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 10rem);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.services-img {
+    width: 30%;
+}
+
+.services-left-grid h4,
+.services-left-grid h1,
+.services-left h1 {
+    color: white;
+}
+
+/*********************************************************************************************************/
+.pricing h1 {
+    color: #000000;
+}
+
+.pricing-grid h1 {
+    color: rgb(255, 255, 255);
+    background-color: #00AAEE;
+    height: 100%;
+    margin: 0;
+}
+
+.pricing-grid h3,
+.pricing-grid p {
+    color: rgb(48, 48, 48);
+    background-color: #cacaca;
+    height: 100%;
+    margin: 0;
+
+}
+
+.pricing {
+    text-align: center;
+    padding: 2REM;
+
+}
+
+.pricing-grid {
+    padding: 2REM 0;
+    display: grid;
+    grid-template-columns: 35vw 10vw 10vw;
+    grid-template-rows: repeat(11, 1fr);
+    justify-content: center;
+    gap: 0.2rem;
+}
+
+.pricing-btn {
+    height: 4rem;
+    width: 10rem;
+    border: none;
+    background-color: #00AEEF;
+    color: white;
+}
+
+/*********************************************************************************************************/
+.booking {
+    background-image: url(main.jpg);
+    text-align: center;
+    padding: 2REM;
+}
+
+.booking h1 {
+    color: white;
+    text-align: center;
+
+}
+
+.booking-grid {
+    padding: 2REM;
+    display: grid;
+    grid-template-columns: 35vw 35vw;
+    grid-template-rows: repeat(5, 1fr);
+    justify-content: center;
+    gap: 1rem;
+    color: #c7c7c7;
+    text-align: left;
+}
+
+.booking-form {
+    background-color: hsl(0, 0%, 43%, 0.5);
+    padding: 1rem 0.5rem;
+}
+
+.booking-form7 {
+    background-color: hsl(0, 0%, 43%, 0.5);
+    grid-column: 1/3;
+    grid-row: 4/6;
+}
+
+.booking-btn {
+    height: 4rem;
+    width: 10rem;
+    border: none;
+    background-color: #00AEEF;
+    color: white;
+}
+
+/******************************************************************************************************/
+.dent-grid {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 15vw);
+    grid-template-rows: 20vw;
+    gap: 1rem;
+}
+
+.dentist {
+    padding: 2REM;
+    text-align: center;
 }
 
 .card {
-  padding: 2em;
+    background-image: url(10.png.webp);
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
-.read-the-docs {
-  color: #888;
+.card h5,
+.card h6 {
+    background-color: hsl(0, 0%, 43%, 0.7);
+    margin: 0;
+    padding: 0.5rem;
+    color: white;
+}
+
+/******************************************************************************************************/
+
+.review {
+    padding: 3REM;
+    padding: 2rem 0;
+    background-image: url(main.jpg);
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    align-items: center;
+
+}
+
+.review p {
+    color: white;
+    width: 50vw;
+}
+
+.review h4 {
+    color: white;
+    margin: 0;
+}
+
+.review img {
+    border-radius: 50%;
+}
+
+/**************************************************************************************************/
+.news {
+    text-align: center;
+    padding: 3REM;
+}
+
+.news-grid {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 15vw);
+    grid-template-rows: 20vw;
+    gap: 1rem;
+}
+
+.newscard {
+    background-image: url(4.jpg.webp);
+    background-size: 100% 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
+}
+
+.newscard h5 {
+    background-color: hsl(0, 0%, 100%);
+    margin: 0;
+    padding: 0.5rem;
+    color: rgb(0, 0, 0);
+    height: 5%;
+}
+
+.newscard p {
+    background-color: hsl(0, 0%, 100%);
+    margin: 0;
+    padding: 0.5rem;
+    color: rgb(0, 0, 0);
+    height: 20%;
+
+}
+
+.newscard-bot {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    justify-content: center;
+    gap: 1REM;
+    align-items: center;
+}
+
+.newscard img {
+    width: 10%;
+    height: 50%;
+}
+
+/************************************************************************************************/
+footer {
+    text-align: center;
+    background-image: url(main.jpg);
+}
+
+footer p {
+    color: white;
+}
+
+.footer-container {
+    padding: 4rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+
+}
+
+.footer-left {
+    width: 20%;
+
+}
+
+.footer-grid {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(4, 10vw);
+    grid-template-rows: 3vw 8vw;
+    gap: 1REM;
+}
+
+.footer-right {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    gap: 15%;
+}
+
+.footer-right h1,
+.footer-right p {
+    margin: 0;
+    font-size: 1.5rem;
+
+}
+
+.footer-grid h1 {
+    grid-column: 1/3;
+    font-size: 1.5REM;
+    margin: 0;
+    text-align: left;
+}
+
+.footer-grid h2 {
+    grid-column: 3/5;
+    font-size: 1.5REM;
+    margin: 0;
+    text-align: left;
+}
+
+.footer-grid ul,
+.footer-grid li {
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    padding: 0;
+
+}
+
+.ul2,
+.ul4 {
+    text-align: right;
+}
+
+.ul1,
+.ul3 {
+    text-align: left;
+}
+
+.footer-right-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20vw;
+    text-align: center;
+    border: 1px solid white;
+    background-color: white;
+}
+
+.footer-right-btn p {
+    height: 1.9rem;
+    margin: 0;
+    color: #000000;
+}
+
+.footer-btn {
+    height: 2rem;
+    width: 2rem;
+
+    background-color: #00AEEF;
+    color: white;
+
+}
+
+.footer-grid ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.footerhr {
+    width: 80%;
+}
+
+/*************************************************************************************************************************************************/
+@media (max-width: 900) {}
+
+@media (max-width: 600px) {
+    .navbar-links {
+        display: none;
+    }
+
+    .hero h1 {
+        font-size: 2.5rem;
+
+        width: 90vw;
+        margin-bottom: 0;
+    }
+
+    .hero p {
+        font-size: 1.5rem;
+
+        width: 90vw;
+    }
+
+    .about {
+        padding: 0;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        align-items: center;
+    }
+
+    .about-left p {
+        width: 90vw;
+        font-size: 1.5rem;
+    }
+
+    .about-left {
+        text-align: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90VW;
+
+    }
+
+    .bar {
+        flex-direction: row;
+        width: 90vw;
+        align-items: center;
+    }
+
+    .stats {
+        display: block;
+    }
+
+    .stats-block h1 {
+        margin: 0;
+
+    }
+    .services {
+        padding: 2rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .services-left-grid {
+        padding-top: 1rem;
+        grid-template-columns: repeat(2, 50VW);
+        grid-template-rows: repeat(3, 1fr);
+        text-align: center;
+    }
+    .services-img {
+        width: 80%;
+    }
+    .services-left h1 {
+        text-align: center;
+    }
+    .pricing-grid {
+        padding: 1rem 0;
+        grid-template-columns: 60vw 18vw 18vw;
+        gap: 0.2rem;
+    }
+
+    .booking-grid {
+        grid-template-columns: 45vw 45vw;
+    }
+    .dent-grid{
+        grid-template-columns: 80vw;
+        grid-template-rows: repeat(3,100vw);
+    }
+    .review {
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    align-items: center;
+
+}
+
+
 }
